--- a/Projet/BmrMvc-g58132/bmr/pom.xml
+++ b/Projet/BmrMvc-g58132/bmr/pom.xml
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.bmr/com.example.bmr.HelloApplication</mainClass>
+                            <mainClass>com.example.bmr/com.example.bmr.viewController.BmrView</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
