--- a/Projet/boulderdash-g58132/pom.xml
+++ b/Projet/boulderdash-g58132/pom.xml
@@ -51,8 +51,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>18</source>
-                    <target>18</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.boulderdashg58132/com.example.boulderdashg58132.HelloApplication
+                            <mainClass>com.example.boulderdashg58132/g58132.atlg3.boulderdash.HelloApplication
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
