fait observeur/observer et decoupe javaFx

--- a/Projet/boulderdash-g58132/pom.xml
+++ b/Projet/boulderdash-g58132/pom.xml
@@ -64,7 +64,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.boulderdashg58132/g58132.atlg3.boulderdash.HelloApplication
+                            <mainClass>com.example.boulderdashg58132/g58132.atlg3.boulderdash.controller.ControllerFx
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
